--- a/Eds212_day2_activities.html
+++ b/Eds212_day2_activities.html
@@ -458,7 +458,7 @@ usethis::use_git()</code></pre>
 ##     }
 ##     invisible()
 ## }
-## &lt;bytecode: 0x119ba0260&gt;
+## &lt;bytecode: 0x109f1eee8&gt;
 ## &lt;environment: namespace:usethis&gt;</code></pre>
 <p>Derive f(x)=x^2 and evaluate slope at x=3</p>
 <pre class="r"><code>func1 &lt;- expression(x^2)
@@ -480,6 +480,7 @@ my_deriv3 &lt;- D(func3 , &quot;t&quot;)
 t &lt;- 0
 eval(func3)</code></pre>
 <pre><code>## [1] 0</code></pre>
+<p>more stuff</p>
 
 
 
