another commit to see what happens when I pull

--- a/Eds212_day2_activities.html
+++ b/Eds212_day2_activities.html
@@ -394,7 +394,7 @@ my_deriv3 &lt;- D(func3 , &quot;t&quot;)
 t &lt;- 0
 eval(func3)</code></pre>
 <pre><code>## [1] 0</code></pre>
-<p>more stuff</p>
+<p>lets see what happens when I “pull”</p>
 
 
 
